# openInvest

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  debug_news.py  docker-compose.yml  exchange_fee.py  invest-agent.service  main.py  news.py  notifier.py  portfolio_manager.py  pyproject.toml  scheduler.py  user_profile.example.json  user_profile_sample.txt
.gemini/: settings.json
agents/: agent.py  bear.py  bull.py  cio.py  forex.py  gold.py  judge.py  macro.py  macro_strategist.py  manager.py  quant.py  risk_officer.py  stock.py
connectors/: napcat_bot.py
core/: benchmarks.py  committee.py  consolidation_lock.py  debate.py  memory_store.py  portfolio_manager.py
db/: market_data.db  market_store.py
docs/: DDGS.README.md  memory_layout.md
examples/: sample_memo.md
jobs/: INDEX.md  commsec_sync.py  commsec_sync.yml  daily_report.py  daily_report.yml  dreaming.py  dreaming.yml  payday_check.py  payday_check.yml  pnl_snapshot.py  pnl_snapshot.yml  weekly_review.py  weekly_review.yml
scheduler/: runner.py
scripts/: backfill_pnl_history.py  check_benchmark_freshness.py  clean_pnl_history.py  diagnose.py  import_gold_trades.py  init_market_db.py  migrate_profile.py  refresh_benchmarks.py  skill.py  skill_history.py  skill_status.py  skill_strategy.py  skill_what_if.py  test_gemini_cli.py  upgrade_to_multi_asset.py
services/: commsec_reader.py  news.py  notifier.py
skill/: README.md  SKILL.md  install.sh  run.sh
tests/: conftest.py  test_committee_parser.py  test_commsec.py  test_gold_price.py  test_memory_store.py  test_pnl_snapshot.py
(+8 files in other folders)
