[project]
name = "invest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "langchain>=0.3.27",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.66",
    "readability-lxml>=0.8.1",
    "python-dotenv>=1.0.1",
    "pandas-stubs~=2.3.3",
    "markdown>=3.10",
    "requests-cache>=1.2.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "python-frontmatter>=1.1.0",
    "apscheduler>=3.11.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
# 删除的未用 dep（audit eng M5）：
# - duckduckgo-search: 已被 ddgs 取代
# - langgraph: grep 全仓零引用
# - alpha-vantage: grep 全仓零引用
